# DrLojekyll

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  DrLojekyllConfig.cmake.in  Fuzzer.cpp  Main.cpp  README.md  download_vcpkg.bat  download_vcpkg.sh  fuzz_harness.cpp  main.cpp  token_dictionary  vcpkg.txt  vcpkg_commit.txt
RuntimeImpl/: CMakeLists.txt  runtime_std_impl.cpp  runtime_std_impl.h
fuzz/: BackendFuzzer.cpp  CMakeLists.txt  Fuzzer.cpp  ParserFuzzer.cpp  compile_commands.json  config.ini  dict.txt  harness.cpp
fuzz/old/: README.md  grammar.txt
fuzz/old/corpus/: input3
fuzz/old/crashes/: crash-071a9f10e610ed9eaf43647cfad68c5fe79ccb1e  crash-09a37470de715313e0ea2cba64fc0e9500dede9f  crash-14b8450dcab1ed8fd1d2c607d134d5071a618463  crash-19b4e5b8b98c52b759b7ea588bb3e25bb8857344  crash-20a26f7e75471e00242a3665411565e8fd905cd0  crash-243b98512cca286328927f1a8006978309f44c03  crash-29360874578ec978a4cb475d208fc5d2bc7f2ac4  crash-3992a211ebbb33689e7fe64dd3da586674bda9ad  crash-3d6dabbc9068dc9c55c1f79def16444feca0340b  crash-3e5ff893c401b31e0077687c520aa9dbac13f42e  crash-3f001b0b21cd0f4f57cdb9cbcebff583f7b9c7f2  crash-461d13940c9d7c05816b72d43f3662cb9af20f8b  crash-5052052f65675ca8f8b7cadab09077f31cef19ea  crash-5135c4fcaff6021ce780ca3f8d7296acab446453  crash-53e4c91437e1299ff68225e95d05850dfa00517a  crash-609738c8210aeb07d2127f866cd2838f9425c3b3  crash-60a5ada8bf62b961540a3b4b936185efb518f3a3  crash-61ef668c20ebf1816717a395c188cf10f759007c  crash-6209f10ded9b3772e0f8080a5c539f8bd44bd830  crash-6d2b6a63260375791fd16c8310a8ace485027e2a  crash-78868b6cf036482d060648c1bbfeeaf028b60e86  crash-830b8fd8cca7fb39e5075a8c9eeb99f66633a534  crash-85265577bc9748ee48d94c16f3988c3c69de16af  crash-85fda5fd6a53c2ea24a4953d2334a4e7284a5c11  crash-915913fe5a2754f314dba5b50627ce5492dd7c9d  crash-9422a1e265531e19c0906bdfdecf147e591b458c  crash-9661d5587d8edcabbce7dd5bea0ca25d63b15aa4  crash-99b804021dc983be6e09b386fb613c0bddc688a0  crash-9f9fa270b619019236677a46dccb9d20dfbef47a  crash-a20f0c3ee10a81cc1afce5cde38e0955c26e4cbc  crash-a612ec8d512c93cf32602806feea28032bf713a3  crash-b2044808116a78f221de659ec11c47025326de2e  crash-c2d56bfb885502a989cb93baadc827a47d0675d9  crash-c403ae92fa8d0674359aefe54ff10eb3d4054fa5  crash-c489a4c1da75b13594734d44f12002856123aa67  crash-c5da0e5aa56f6291bd8c37152939d90d91f09c35  crash-c67b3719d3f8ab90ec9c9ff6e9691341fab8edb8  crash-ccbfd87cb1b94df63039e53a1eb510ce71c2478f  crash-d0abbe1985c5113ad6bdd5681be6cd7f08513304  crash-d27ccfaa6847ef1289b4757fc604d30798c98d50  (+12 more)
lib/: CMakeLists.txt
lib/CodeGen/: BAM.cpp  CMakeLists.txt  CPlusPlus.cpp  CodeGen.cpp  CodeGen.h  MessageSerialization.cpp  ParseBAM.cpp  Python.cpp  QueryBAM.cpp  Util.cpp
lib/CodeGen/CPlusPlus/: Client.cpp  Database.cpp  Interface.cpp  Server.cpp  Service.cpp  Util.cpp  Util.h
lib/CodeGen/FlatBuffer/: Interface.cpp
lib/CodeGen/Python/: Database.cpp  Interface.cpp  Util.cpp  Util.h
lib/ControlFlow/: Analyze.cpp  BasicRegion.cpp  Build.cpp  CMakeLists.txt  Data.cpp  Format.cpp  Induction.cpp  Operation.cpp  Optimize.cpp  Parallel.cpp  ParallelRegion.cpp  Procedure.cpp  Program.cpp  Program.h  Region.cpp  Series.cpp  SeriesRegion.cpp  Table.cpp  Visitor.cpp
lib/DataFlow/: Aggregate.cpp  Build.cpp  Build.h  CMakeLists.txt  Column.cpp  Columns.cpp  Compare.cpp  Condition.cpp  Connect.cpp  Constant.cpp  Constraint.cpp  Cycle.cpp  DeadFlowElimination.cpp  Delete.cpp  Differential.cpp  EquivalenceSet.h  Format.cpp  IO.cpp  Induction.cpp  Input.cpp  Insert.cpp  Join.cpp  KVIndex.cpp  Link.cpp  Map.cpp  Merge.cpp  Negate.cpp  Optimize.cpp  Optimize.h  Query.cpp  Query.h  Relation.cpp  Select.cpp  Stream.cpp  Subgraph.cpp  Taint.cpp  Taint.h  Tuple.cpp  View.cpp
lib/Display/: CMakeLists.txt  DataStream.cpp  DataStream.h  Display.cpp  Display.h  DisplayManager.cpp  DisplayPosition.cpp  DisplayPosition.h  DisplayReader.cpp  Format.cpp
lib/Lex/: CMakeLists.txt  Format.cpp  Lexer.cpp  StringPool.cpp  Token.cpp  Token.h
lib/Parse/: Aggregate.cpp  CMakeLists.txt  Clause.cpp  Enum.cpp  Error.cpp  Error.h  ErrorLog.cpp  Foreign.cpp  Format.cpp  Functor.cpp  Import.cpp  Include.cpp  Inline.cpp  Message.cpp  ModuleIterator.cpp  Parse.cpp  Parse.h  Parser.cpp  Parser.h  Query.cpp  Resolve.cpp  Type.cpp  Variable.cpp
lib/Rel/: Aggregate.cpp  Build.cpp  Builder.cpp  CMakeLists.txt  Column.cpp  Connect.cpp  Constant.cpp  Constraint.cpp  Differential.cpp  Format.cpp  Generator.cpp  Input.cpp  Insert.cpp  Join.cpp  KVIndex.cpp  Map.cpp  Merge.cpp  Optimize.cpp  Query.cpp  Query.h  Select.cpp  Stream.cpp  Tuple.cpp  View.cpp  Visitor.h
lib/Runtime/: CMakeLists.txt  Error.cpp  Runtime.cpp  Semaphore.cpp  Slab.cpp  Slab.h  SlabList.cpp  SlabManager.cpp  SlabManager.h  SlabReference.cpp  SlabRuntime.cpp  SlabStorage.cpp  SlabStorage.h  SlabVector.cpp  StdRuntime.cpp
lib/Runtime/Client/: Client.cpp  Client.h  Connection.cpp  Connection.h  Serialize.cpp  Serialize.h  Stream.cpp  Stream.h
lib/Runtime/Slab/: Error.cpp  Error.h  Slab.h  SlabList.cpp  (+6 more)
lib/Sema/: BottomUpAnalysis.cpp  CMakeLists.txt  ModuleIterator.cpp  RangeRestriction.cpp  SIPSAnalysis.cpp  SIPSChecker.cpp  SIPSScore.cpp
lib/Transforms/: CMakeLists.txt  CombineModules.cpp  ConvertQueriesToMessages.cpp  ProxyExternalsWithExports.cpp
lib/Util/: CMakeLists.txt  DefUse.cpp  DisjointSet.cpp  EqualitySet.cpp  FileManager.cpp  Node.cpp
lib/Version/: CMakeLists.txt  Version.cpp.in  Version.h
libraries/flatbuffers/: CMakeLists.txt
tests/: BitManipulation.cpp  CMakeLists.txt  Parsing.cpp  Runtime.cpp  SlabRuntime.cpp  UnitTests.h  drlojekyll_paths.h.in  example.cpp  unittests.cpp  unittests.h
tests/LLVM/: CMakeLists.txt  Interface.cpp  Interface.h  Main.cpp  Report.cpp  Report.h  Standalone.cpp  analyze.dr  llvm.dr
tests/MiniDisassembler/: CMakeLists.txt  Client.cpp  Main.cpp  Standalone.cpp  database.dr  main.py
tests/PointsTo/: CMakeLists.txt  FactPaths.h.in  Standalone.cpp  database.dr
tests/cmake/: setup_venv.cmake
tests/external_build/: CMakeLists.txt
(+352 files in other folders)
