# Copyright 2019, Trail of Bits, Inc. All rights reserved.

add_subdirectory(Util)
add_subdirectory(Display)
add_subdirectory(Lex)
add_subdirectory(Parse)
add_subdirectory(DataFlow)
add_subdirectory(Runtime)
add_subdirectory(Transforms)
add_subdirectory(CodeGen)

function(lib source_dir config)
    util("${source_dir}/Util" ${config})
    display("${source_dir}/Display" ${config})
    lexer("${source_dir}/Lex" ${config})
    parser("${source_dir}/Parse" ${config})
    dataflow("${source_dir}/DataFlow" ${config})
    transforms("${source_dir}/Transforms" ${config})
    codegen("${source_dir}/CodeGen" ${config})
    runtime("${source_dir}/Runtime" ${config})
endfunction(lib)